--- a/about.css
+++ b/about.css
@@ -1,132 +1,5 @@
 
-*{box-sizing:border-box}
-:root {
-    --dark-bg: #10101a; 
-    --main-dark: #1e1e2d; 
-    --accent-purple: #8a2be2; 
-    --text-color: #f0f0f0;
-    --card-hover: #2a2a3e;    --accent: #7765fa}
-body {
-    background-color: var(--dark-bg);
-    color: var(--text-color);
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    transition: background-color 0.3s;}
-a {
-    color: var(--text-color);
-    text-decoration: none;
-    transition: color 0.2s;
-}
 
-
-header {
-    background-color: var(--main-dark);
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 10px 30px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-    flex-wrap: wrap;
-    
-}
-img{
-  width: 100%;
-  height: 300px;
-}
-
-.site-left {
-  margin-right: 50px;
-     display:flex;
-    align-items:center;
-    gap:10px;
-    flex-shrink:0
-  
-}
-
-.logo {
-     width:44px;
-    height:44px;
-    border-radius:8px;
-    background:linear-gradient(135deg,rgba(122, 21, 97, 0.678), var(--accent));
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-weight:700;
-}
-
-.site-name {
-     font-weight:700
-}
-
-
-
-.main-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-
-.main-nav li a {
-    padding: 10px 15px;
-    border-radius: 5px;
-    margin: 0 5px;
-}
-
-
-.main-nav li a[style*="blueviolet"] {
-    background-color: var(--accent-purple) !important;
-    font-weight: bold;
-}
-
-.main-nav li a:hover:not([style*="blueviolet"]) {
-    background-color: rgba(138, 43, 226, 0.2); 
-}
-
-.menu-toggle{
-  display:none;
-  background:transparent;
-  border:1px solid rgba(255,255,255,0.04);
-  color:var(--white);
-  padding:8px 10px;
-  border-radius:8px;
-  cursor:pointer;
-  margin-left:6px;
-}
-
-
-.search input {
-  margin-left: 500px;
-    padding: 8px 15px;
-    border: none;
-    border-radius: 20px;
-    background-color: #2a2a3e;
-    color: var(--text-color);
-    width: 250px;
-    outline: none;
-}
-.search input::placeholder {
-    color: #999;
-}
-
-.login button{
-  
-    padding: 5px 25px;
-    border-radius: 25px; 
-    cursor: pointer;
-    font-weight: 700;
-    color: #f0f0f0;
-    background:blueviolet; 
-    margin-left: 20px;
-   margin-right: 20px;
-  
-
-  }
-  .login button:hover{
-background: linear-gradient(135deg,rgba(122, 21, 97, 0.678), var(--accent)); 
-    
-  }
 .about {
   background-color: #0d0d1a; 
   color: #ffffff;
@@ -166,7 +39,7 @@ background: linear-gradient(135deg,rgba(122, 21, 97, 0.678), var(--accent));
   flex: 1 1 250px;
   max-width: 300px;
   text-align: center;
-  background-color: rgba(192, 114, 170, 0.547);
+  background-color: #8a2be2;
   padding: 20px;
   border-radius: 12px;
 }
