--- a/styles.css
+++ b/styles.css
@@ -672,7 +672,7 @@ footer {
   align-items: center;
   background: var(--main-dark);  
   height:100px;
-
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 #footernav,
